# Remarkable

./: .gitignore  CRATES_PLAN.md  README.md  SYNC.md
agent/: README.md  flue.config.ts  package.json  tsconfig.json
alt-ui/: .gitignore  Cargo.toml  Makefile  README.md  SYNC_PLAN.md
coder/: Cargo.toml  Makefile  README.md
collab/: Cargo.toml  Makefile  README.md
collab/app/: external.manifest.json
collab/scripts/: appload-launch.sh  takeover.sh
collab/src/: conv.rs  font.rs  history.rs  main.rs  md.rs  pen.rs  pi_rpc.rs  power.rs  rm2fb.rs  text.rs  touch.rs
collab/test/: fake-pi.py  fake-qtfb.py
collab/tools/: trace-viewer.py
context-management/: .gitignore  Justfile  README.md  package.json
notebook/: Cargo.toml  Makefile  README.md  cost.md
notebook/app/: external.manifest.json
notebook/ext/: notebook-canvas.ts
notebook/scripts/: appload-launch.sh  takeover.sh
notebook/src/: display.rs  draw.rs  hershey.rs  hershey_data.rs  ink.rs  ipc.rs  library.rs  live.rs  main.rs  pen.rs  pi_rpc.rs  power.rs  qtfb.rs  rm2fb.rs  svg_ink.rs  text.rs  touch.rs
notebook/test/: fake-pi.py  fake-qtfb.py
notebook/tools/: trace-viewer.py
notebook/tools/hershey-math/: README.md  gen_math.py  jhf.py
papier/: Cargo.toml  Makefile  README.md  SYNC_PLAN.md
papier-ios/: .gitignore  Makefile  README.md  project.yml
pi/: README.md  probe.sh
pi-collab/: Cargo.toml  Makefile  README.md
reader/: Cargo.toml  Makefile  README.md
sample-app/: Makefile  README.md
sample-app-rust/: Cargo.toml  Makefile  README.md
scripts/: deploy-remarkable.sh  deploy-server.sh
sketchbook/: Cargo.toml  MODEL_PLAN.md  Makefile  README.md
sketchbook/app/: external.manifest.json
sketchbook/ext/: sketchbook-canvas.ts  sketchbook-context.ts
sketchbook/scripts/: appload-launch.sh  takeover.sh
sketchbook/src/: ink.rs  library.rs  live.rs  main.rs  pi_rpc.rs
sketchbook/test/: fake-pi.py  fake-qtfb.py
sketchbook/tools/: render.py
sync/: ARCHITECTURE.md  README.md
(+247 files in other folders)
