[package]
name = "collab"
version = "0.1.0"
edition = "2021"

[dependencies]
libc = "0.2"        # sockets, mmap, poll, sigaction, evdev, ioctl
serde_json = "1"    # pi's RPC protocol is JSON lines over stdin/stdout
fontdue = "0.9"     # pure-Rust TrueType rasterizer (antialiased glyphs)

[profile.release]
strip = true
lto = true
opt-level = "s"
