[package]
name = "notebook"
version = "0.1.0"
edition = "2021"

[dependencies]
libc = "0.2"        # sockets, mmap, poll, sigaction, evdev, ioctl
serde_json = "1"    # pi's RPC protocol + the tool IPC + page files are JSON
fontdue = "0.9"     # pure-Rust TrueType rasterizer (chrome/sleep-page text)

[profile.release]
strip = true
lto = true
opt-level = "s"
