[package]
name = "sketchbook"
version = "0.1.0"
edition = "2021"

[dependencies]
libc = "0.2"        # sockets, mmap, poll, sigaction, evdev, ioctl
serde_json = "1"    # pi's RPC protocol + the tool IPC + page files are JSON
fontdue = "0.9"     # pure-Rust TrueType rasterizer (chrome/sleep-page text)
libreink-core = { path = "../../libreink/crates/libreink-core" }        # fb/draw/font/png
libreink-display = { path = "../../libreink/crates/libreink-display" }  # qtfb/rm2fb/waveforms
libreink-input = { path = "../../libreink/crates/libreink-input" }      # touch/pen/power
libreink-hershey = { path = "../../libreink/crates/libreink-hershey" }  # plotter stroke fonts
libreink-page = { path = "../../libreink/crates/libreink-page" }        # vector ink page model
libreink-pi = { path = "../../libreink/crates/libreink-pi" }            # agent transport + tool socket
libreink-svg = { path = "../../libreink/crates/libreink-svg" }          # agent SVG -> ink
libreink-text = { path = "../../libreink/crates/libreink-text" }        # typeset text (fontdue)

[profile.release]
strip = true
lto = true
opt-level = "s"
